--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Profile Page</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello, World!</h1>
-    <h1>hello from the other side!</h1>
-    <h1>لاتشوفي عم اتدرج دوبلني وتفرج
-    </h1>
+    <div class="container text-center my-5">
+        <div class="avatar">
+            <img src="Avatar.png" alt="Avatar" class="rounded-circle">
+        </div>
+        <h1 class="mt-3">PSYCHO</h1>
+        <p class="bio">Hello! I'm Yazan, a passionate gamer and streamer. Catch me live on Twitch or join my Discord
+            server!</p>
+        <div class="social-icons mt-4">
+            <a href="https://twitch.tv/PSYCHO_1H" target="_blank" class="text-decoration-none">
+                <i class="fab fa-twitch fa-2x"></i>
+            </a>
+            <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-3">
+                <i class="fab fa-discord fa-2x"></i>
+            </a>
+            <a href="https://steamcommunity.com/id/yourprofile" target="_blank" class="text-decoration-none ml-3">
+                <i class="fab fa-steam fa-2x"></i>
+            </a>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
