--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-3">
                 <i class="fab fa-discord fa-2x"></i>
             </a>
-            <a href="https://steamcommunity.com/id/yourprofile" target="_blank" class="text-decoration-none ml-3">
+            <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
+                class="text-decoration-none ml-3">
                 <i class="fab fa-steam fa-2x"></i>
             </a>
         </div>
