--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container text-center my-5">
         <div class="avatar">
-            <img src="Avatar.png" alt="Avatar" class="rounded-circle">
+            <img src="img/Avatar.png" alt="Avatar" class="rounded-circle">
         </div>
-        <h1 class="mt-3">PSYCHO</h1>
+        <h1 class="mt-3">They Call Me PSYCHO</h1>
         <p class="bio">Hello! I'm Yazan, a passionate gamer and streamer. Catch me live on Twitch or join my Discord
             server!</p>
         <div class="social-icons mt-4">
             <a href="https://twitch.tv/PSYCHO_1H" target="_blank" class="text-decoration-none">
-                <i class="fab fa-twitch fa-2x"></i>
+                <img src="img/twitch.png" alt="twitch" class="twitch">
             </a>
             <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-3">
-                <i class="fab fa-discord fa-2x"></i>
+                <img src="img/discord.png" alt="Discord" class="discord">
             </a>
             <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
                 class="text-decoration-none ml-3">
-                <i class="fab fa-steam fa-2x"></i>
+                <img src="img/steam.png" alt="steam" class="steam">
             </a>
         </div>
     </div>
