--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div class="video-background">
+        <video autoplay muted loop id="bg-video">
+            <source src="psycho.webm" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <div class="container text-center my-5">
         <div class="avatar">
             <img src="img/Avatar.png" alt="Avatar" class="rounded-circle">
