--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="video-background">
-        <video autoplay muted loop id="bg-video">
+        <video autoplay loop id="bg-video">
             <source src="psycho.webm" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -40,5 +40,3 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
-</html>
