--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="video-background">
         <video autoplay loop id="bg-video">
             <source src="psycho.webm" type="video/mp4">
@@ -17,6 +18,8 @@
         </video>
     </div>
     <div class="container text-center my-5">
+        <button id="muteButton">Mute</button>
+        <button id="unmuteButton">Unmute</button>
         <div class="avatar">
             <img src="img/Avatar.png" alt="Avatar" class="rounded-circle">
         </div>
@@ -39,4 +42,24 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>   document.addEventListener("DOMContentLoaded", function () {
+            const video = document.getElementById('bg-video');
+            const muteButton = document.getElementById('muteButton');
+            const unmuteButton = document.getElementById('unmuteButton');
+
+            muteButton.addEventListener('click', () => {
+                video.muted = true;
+                muteButton.style.display = 'none';
+                unmuteButton.style.display = 'inline';
+            });
+
+            unmuteButton.addEventListener('click', () => {
+                video.muted = false;
+                unmuteButton.style.display = 'none';
+                muteButton.style.display = 'inline';
+            });
+
+        });
+
+    </script>
 </body>
