--- a/index.html
+++ b/index.html
@@ -13,29 +13,32 @@
 
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="psycho.webm" type="video/webm">
-            Your browser does not support the video tag.
+            <source src="PSYCHO.mp4" type="video/mp4">
         </video>
     </div>
     <div class="containerr text-center">
         <div class="avatar">
             <img src="img/Avatar.png" alt="Avatar" class="rounded-circle">
         </div>
-        <h1 class="mt-3">They Call Me PSYCHO</h1>
-        <p class="bio">Hello! I'm Yazan, a passionate gamer and streamer.<br> Catch me live on Twitch or join my Discord
-            server!</p>
+        <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
+        <p class="bio">Ladies and jungle fans<br>I'm Yazan gamer and streamer in the 1House family.<br> Catch me live on
+            Twitch or join Our Discord server!</p>
         <div class="social-icons mt-4">
-            <a href="https://twitch.tv/PSYCHO_1H" target="_blank" class="text-decoration-none">
+            </a>
+            <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
+                <img src="img/Insta.png" alt="Insta" class="Insta">
+            </a>
+            <a href="https://twitch.tv/PSYCHO_1H" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/twitch.png" alt="twitch" class="twitch">
             </a>
-            <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-3">
+            <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/discord.png" alt="Discord" class="discord">
             </a>
             <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
-                class="text-decoration-none ml-3">
+                class="text-decoration-none ml-2">
                 <img src="img/steam.png" alt="steam" class="steam">
             </a>
-            <button id="muteButton" class="ml-3">
+            <button id="muteButton" class="ml-2">
                 <img src="img/mute.png" alt="mute" class="mute" id="mute">
                 <img src="img/unmute.png" alt="unmute" class="unmute" id="unmute">
             </button>
