--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     </div>
     <div class="containerr text-center">
         <div class="avatar">
-            <img src="img/Avatar.png" alt="Avatar" class="rounded-circle">
+            <img src="img/Avatar.jpg" alt="Avatar" class="rounded-circle">
         </div>
         <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
-        <p class="bio">Ladies and jungle fans<br>I'm Yazan gamer and streamer in the 1House family.<br> Catch me live on
+        <p class="bio">Ladies and jungle fans<br>I'm Yazan, gamer and streamer in 1House family.<br> Catch me live
+            on
             Twitch or join Our Discord server!</p>
         <div class="social-icons mt-4">
             </a>
