--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="img/discord.png" alt="Discord" class="discord">
             </a>
             <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
-                class="text-decoration-none ml-2">
+                class="text-decoration-none">
                 <img src="img/steam.png" alt="steam" class="steam">
             </a>
             <button id="muteButton" class="ml-2">
