lower the video vol

--- a/index.html
+++ b/index.html
@@ -70,4 +70,8 @@
             });
         });
     </script>
+    <script>
+        const video = document.getElementById('bg-video');
+        video.volume = 0.07;
+    </script>
 </body>
