--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <img src="img/Avatar.jpg" alt="Avatar" class="rounded-circle">
         </div>
         <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
-        <p class="bio">Ladies and jungle fans<br>I'm Yazan, gamer and streamer in 1House family.<br> Catch me live on
-            Twitch or join Our Discord server!</p>
+        <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br> Catch me
+            live on
+            Twitch or join our Discord server!</p>
         <div class="social-icons mt-4">
             <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/Insta.png" alt="Insta" class="Insta">
