--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br> Catch me
             live on
             Twitch or join our Discord server!</p>
-        <div class="social-icons mt-4">
+        <div class="social-icons">
             <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/Insta.png" alt="Insta" class="Insta">
             </a>
@@ -37,7 +37,7 @@
                 class="text-decoration-none">
                 <img src="img/steam.png" alt="steam" class="steam">
             </a>
-            <button id="muteButton" class="ml-2">
+            <button id="muteButton">
                 <img src="img/mute.png" alt="mute" class="mute" id="mute">
                 <img src="img/unmute.png" alt="unmute" class="unmute" id="unmute" style="display:none;">
             </button>
