--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>PSYCHO_1H</title>
     <link href="reset.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="favico/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -20,7 +21,8 @@
             <img src="img/Avatar.jpg" alt="Avatar" class="rounded-circle">
         </div>
         <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
-        <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br> Catch me
+        <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br>
+            Catch me
             live on
             Twitch or join our Discord server!</p>
         <div class="social-icons">
