--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
             <source src="PSYCHO.mp4" type="video/mp4">
         </video>
     </div>
+
     <div class="container text-center">
-        <div class="avatar">
-            <img src="img/Avatar.jpg" alt="Avatar" class="rounded-circle">
+        <div class="analyzer-container">
+            <div class="avatar">
+                <img src="img/Avatar.jpg" alt="Avatar" class="rounded-circle">
+            </div>
+            <!-- This div will hold the analyzer -->
+            <div id="analyzer"></div>
         </div>
+
         <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
         <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br>
-            Catch me
-            live on
-            Twitch or join our Discord server!</p>
+            Catch me live on Twitch or join our Discord server!</p>
+
         <div class="social-icons">
             <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/Insta.png" alt="Insta" class="Insta">
@@ -66,6 +71,34 @@
             });
 
             video.volume = 0.07;
+        });
+    </script>
+
+    <script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const analyzerContainer = document.getElementById('analyzer');
+            const avatar = document.querySelector('.avatar');
+            const audioMotion = new AudioMotionAnalyzer(
+                analyzerContainer,
+                {
+                    mode: 3,
+                    gradient: 'rainbow',
+                    alphaBars: true,
+                    overlay: true,
+                    bgAlpha: 0,
+                    radial: true,
+
+                    linearAmplitude: true,
+                    linearBoost: 9,
+                    showPeaks: true,
+                    onCanvasDraw: instance => {
+                        instance.radius = .4 + instance.getEnergy();
+                        avatar.style.transform = `scale(${1 + instance.getEnergy() * 0.25})`;
+                    },
+                    source: document.getElementById('bg-video')
+                }
+            );
         });
     </script>
 </body>
