--- a/index.html
+++ b/index.html
@@ -50,57 +50,8 @@
             </button>
         </div>
     </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const video = document.getElementById('bg-video');
-            const muteButton = document.getElementById('muteButton');
-            const muteImg = document.getElementById('mute');
-            const unmuteImg = document.getElementById('unmute');
-
-            muteButton.addEventListener('click', () => {
-                if (video.muted) {
-                    video.muted = false;
-                    unmuteImg.style.display = "block";
-                    muteImg.style.display = "none";
-                } else {
-                    video.muted = true;
-                    muteImg.style.display = "block";
-                    unmuteImg.style.display = "none";
-                }
-            });
-
-            video.volume = 0.07;
-        });
-    </script>
-
     <script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const analyzerContainer = document.getElementById('analyzer');
-            const avatar = document.querySelector('.avatar');
-            const audioMotion = new AudioMotionAnalyzer(
-                analyzerContainer,
-                {
-                    mode: 3,
-                    gradient: 'rainbow',
-                    alphaBars: true,
-                    overlay: true,
-                    bgAlpha: 0,
-                    radial: true,
-
-                    linearAmplitude: true,
-                    linearBoost: 9,
-                    showPeaks: true,
-                    onCanvasDraw: instance => {
-                        instance.radius = .4 + instance.getEnergy();
-                        avatar.style.transform = `scale(${1 + instance.getEnergy() * 0.25})`;
-                    },
-                    source: document.getElementById('bg-video')
-                }
-            );
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
