random video and avatar clickable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="PSYCHO.mp4" type="video/mp4">
+            <source class="bg-video-source" src="" type="video/mp4">
         </video>
     </div>
 
