--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="video-background">
-        <video autoplay muted loop id="bg-video">
+        <video autoplay muted loop id="bg-video" preload="auto">
             <source class="bg-video-source" src="" type="video/mp4">
         </video>
     </div>
