txt and pic added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and streamer in the 1House family.<br>
             Catch me live on Twitch or join our Discord server!</p>
 
+
         <div class="social-icons">
             <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/Insta.png" alt="Instagram Logo" class="Insta">
@@ -76,6 +77,9 @@
                 <img src="img/unmute.png" alt="Unmute Button" class="unmute" id="unmute" style="display:none;">
             </button>
         </div>
+        <h1 class="toptxt">From the River to the Sea <br> Palestine will be free</h1>
+        <img src="img/Ps.png" alt="ps" class="pss">
+
     </div>
     <script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
     <script src="main.js"></script>
