--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <link href="reset.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="favico/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="favico/favicon.ico" type="image/x-icon"> -->
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
           "@type": "Person",
-          "name": "PSYCHO_1H",
+          "name": "PSYCHO",
           "alternateName": "Yazan",
-          "description": "A passionate gamer and streamer in the 1House family.",
+          "description": "A passionate gamer and streamer.",
           "url": "https://psycho.1housee.com",
           "sameAs": [
             "https://www.instagram.com/psy_f0/",
-            "https://twitch.tv/PSYCHO_1H",
+            "https://kick.com/p-syr1a",
             "https://discord.gg/TAHqDcGdUp",
             "https://steamcommunity.com/profiles/76561199040569589/"
             ]
@@ -57,17 +57,16 @@
 
         <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
         <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and
-            streamer in the 1House family.<br>
-            Catch me live on Twitch or join our Discord server!</p>
-
+            streamer.<br>
+            Catch me live on Kick "SOON" or join my Discord server!</p>
         <div class="social-icons">
             <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/Insta.png" alt="Instagram Logo" class="Insta">
             </a>
-            <a href="https://twitch.tv/PSYCHO_1H" target="_blank" class="text-decoration-none ml-2">
-                <img src="img/twitch.png" alt="Twitch Logo" class="twitch">
+            <a href="https://kick.com/p-syr1a" target="_blank" class="text-decoration-none ml-2">
+                <img src="img/kick.png" alt="Twitch Logo" class="twitch">
             </a>
-            <a href="https://discord.gg/TAHqDcGdUp" target="_blank" class="text-decoration-none ml-2">
+            <a href="https://discord.gg/qjRgCvvNxr" target="_blank" class="text-decoration-none ml-2">
                 <img src="img/discord.png" alt="Discord Logo" class="discord">
             </a>
             <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
