--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSYCHO_1H - Gamer & Streamer | Live on Twitch & Discord</title>
+    <title>PSYCHO - Gamer & Streamer | Live on Kick & Discord</title>
     <meta name="description"
-        content="Join PSYCHO_1H, a passionate gamer and streamer. Catch live streams on Twitch, join our Discord server, and follow on social media for the latest updates.">
+        content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="PSYCHO_1H - Gamer & Streamer | Live on Twitch & Discord">
+    <meta property="og:title" content="PSYCHO - Gamer & Streamer | Live on Kick & Discord">
     <meta property="og:description"
-        content="Join PSYCHO_1H, a passionate gamer and streamer. Catch live streams on Twitch, join our Discord server, and follow on social media for the latest updates.">
+        content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
     <meta property="og:image" content="https://psycho.1housee.com/img/Avatar.jpg">
     <meta property="og:url" content="https://psycho.1housee.com">
     <meta property="og:type" content="website">
@@ -50,7 +50,7 @@
 
         <div class="analyzer-container">
             <div class="avatar">
-                <img src="img/Avatar.jpg" alt="Avatar of PSYCHO_1H" class="rounded-circle">
+                <img src="img/Avatar.jpg" alt="Avatar of PSYCHO" class="rounded-circle">
             </div>
             <div id="analyzer"></div>
         </div>
