--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PSYCHO - Gamer & Streamer | Live on Kick & Discord</title>
     <meta name="description"
-        content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
+      content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="PSYCHO - Gamer & Streamer | Live on Kick & Discord">
+    <meta property="og:title"
+      content="PSYCHO - Gamer & Streamer | Live on Kick & Discord">
     <meta property="og:description"
-        content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
-    <meta property="og:image" content="https://psycho.1housee.com/img/Avatar.jpg">
+      content="Join PSYCHO, a passionate gamer and streamer. Catch live streams on Kick, join our Discord server, and follow on social media for the latest updates.">
+    <meta property="og:image"
+      content="https://psycho.1housee.com/img/Avatar.jpg">
     <meta property="og:url" content="https://psycho.1housee.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PSYCHO_1H">
@@ -36,56 +38,60 @@
             ]
         }
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
 
     <div class="video-background">
-        <video autoplay muted loop id="bg-video" preload="auto">
-            <source class="bg-video-source" src type="video/mp4">
-        </video>
+      <video autoplay muted loop id="bg-video" preload="auto">
+        <source class="bg-video-source" src type="video/mp4">
+      </video>
     </div>
 
     <div class="container text-center">
 
-        <div class="analyzer-container">
-            <div class="avatar">
-                <img src="img/Avatar.jpg" alt="Avatar of PSYCHO" class="rounded-circle">
-            </div>
-            <div id="analyzer"></div>
+      <div class="analyzer-container">
+        <div class="avatar">
+          <img src="img/Avatar.jpg" alt="Avatar of PSYCHO"
+            class="rounded-circle">
         </div>
+        <div id="analyzer"></div>
+      </div>
 
-        <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
-        <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and
-            streamer.<br>
-            Catch me live on Kick "SOON" or join my Discord server!</p>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/psy_f0/" target="_blank" class="text-decoration-none ml-2">
-                <img src="img/Insta.png" alt="Instagram Logo" class="Insta">
-            </a>
-            <a href="https://kick.com/p-syr1a" target="_blank" class="text-decoration-none ml-2">
-                <img src="img/kick.png" alt="Twitch Logo" class="twitch">
-            </a>
-            <a href="https://discord.gg/qjRgCvvNxr" target="_blank" class="text-decoration-none ml-2">
-                <img src="img/discord.png" alt="Discord Logo" class="discord">
-            </a>
-            <a href="https://steamcommunity.com/profiles/76561199040569589/" target="_blank"
-                class="text-decoration-none">
-                <img src="img/steam.png" alt="Steam Logo" class="steam">
-            </a>
-            <button id="muteButton">
-                <img src="img/mute.png" alt="Mute Button" class="mute" id="mute">
-                <img src="img/unmute.png" alt="Unmute Button" class="unmute" id="unmute" style="display:none;">
-            </button>
+      <h1 class="mt-3">THEY CALL ME<br>PSYCHO</h1>
+      <p class="bio">Ladies and jungle fans,<br>I'm Yazan, a gamer and
+        streamer.<br>
+        Catch me live on Twitch or join my Discord server!</p>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/psy_f0/" target="_blank"
+          class="text-decoration-none ml-2">
+          <img src="img/Insta.png" alt="Instagram Logo" class="Insta">
+        </a>
+        <a href="https://twitch.tv/iitzpsyko" target="_blank"
+          class="text-decoration-none ml-2">
+          <img src="img/twitch.png" alt="Twitch Logo" class="twitch">
+        </a>
+        <a href="https://discord.gg/qjRgCvvNxr" target="_blank"
+          class="text-decoration-none ml-2">
+          <img src="img/discord.png" alt="Discord Logo" class="discord">
+        </a>
+        <a href="https://steamcommunity.com/profiles/76561199040569589/"
+          target="_blank"
+          class="text-decoration-none">
+          <img src="img/steam.png" alt="Steam Logo" class="steam">
+        </a>
+        <button id="muteButton">
+          <img src="img/mute.png" alt="Mute Button" class="mute" id="mute">
+          <img src="img/unmute.png" alt="Unmute Button" class="unmute"
+            id="unmute" style="display:none;">
+        </button>
 
-            <h1 class="toptxt">From the River to the Sea <br> Palestine will
-                be free</h1>
-        </div>
-        <div class="test">
-            <a href="page2.html"><img src="img/user.png" alt="about"></a>
-        </div>
-        <script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
-        <script src="main.js"></script>
-</body>
+      </div>
+      <div class="test">
+        <a href="page2.html"><img src="img/user.png" alt="about"></a>
+      </div>
+      <script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
+      <script src="main.js"></script>
+    </body>
 
-</html>
+  </html>
